--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="SecunologieCI - Solutions de sécurité électronique en Côte d'Ivoire" />
+    <meta name="description" content="SecunologieCI - Catalogue e-commerce de solutions de sécurité électronique classées par catégorie." />
+    <meta name="keywords" content="caméra de surveillance, NVR, vidéosurveillance, sécurité électronique, contrôle d'accès, Côte d'Ivoire" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="SecunologieCI - Catalogue Sécurité électronique" />
+    <meta property="og:description" content="Découvrez des produits de sécurité classés par catégorie, avec fiches détaillées et disponibilité en stock." />
+    <meta property="og:locale" content="fr_FR" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <link rel="preconnect" href="https://samr.pythonanywhere.com" crossorigin />
     <title>Site web SecunologieCI - Solutions de Sécurité Électronique</title>
   </head>
   <body>
